# pipeasio

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  pipeasio-register
.github/workflows/: ci.yml  pages.yml  release.yml
cmake/: GenBuildInfo.cmake  WineDLL.cmake
docs/: index.html  sitemap.xml
gui/: CMakeLists.txt  Config.cpp  Config.hpp  DeviceEnumerator.cpp  DeviceEnumerator.hpp  GraphModel.cpp  GraphModel.hpp  PipeWireGraph.cpp  PipeWireGraph.hpp  PipeWireMonitor.cpp  PipeWireMonitor.hpp  SettingsDialog.cpp  SettingsDialog.hpp
include/: audio.h  control_panel.h  panel_launch.h  pipeasio_clsid.h  pipeasio_config.h  pipeasio_log.h  pipeasio_offsets.h  pipeasio_rt.h  pipeasio_unix_abi.h  pipeasio_wow64_pe.h
src/: asio.c  audio.c  config.c  control_panel.c  main.c  panel_launch.c  regsvr.c
src/wow64/: audio_proxy.c  audio_unix.c  pipeasio32.def  pipeasio32_unixlib.spec
tests/asio_loopback/: CMakeLists.txt
tests/asio_probe/: CMakeLists.txt  asio_probe.c  run32.sh
tests/distro/: run.sh
tests/distro/flags/: arch.sh  fedora.sh  ubuntu.sh
tests/gui/: CMakeLists.txt  test_graphmodel.cpp  test_panel.cpp
tests/pw_probe/: CMakeLists.txt  pw_default_probe.c  pw_filter_probe.c
tests/unit/: test_config.c  test_offsets.c
tests/wow64/: CMakeLists.txt  check_abi.sh  unix_abi_layout.c
